--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+/*body {
   background: url("/Users/hern/code/kp-quote-generator/media/KP.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+*/
