--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-/*body {
-  background: url("/Users/hern/code/kp-quote-generator/media/KP.png") no-repeat center center fixed;
+body {
+  background: url("/media/KP.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-*/
+
