--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("/media/KP.png") no-repeat center center fixed;
+  background: url("./media/KP.png") no-repeat center center fixed;
   background-size: cover;
 }
 
